--- a/src/index.css
+++ b/src/index.css
@@ -2,16 +2,56 @@
 @tailwind components;
 @tailwind utilities;
 
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@font-face {
+  font-family: 'Pretendard-Light';
+  src: url('/public/fonts/Pretendard-Light.woff');
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+@font-face {
+  font-family: 'Pretendard-Regular';
+  src: url('/public/fonts/Pretendard-Regular.woff');
+}
+
+@font-face {
+  font-family: 'Pretendard-Medium';
+  src: url('/public/fonts/Pretendard-Medium.woff');
+}
+
+@font-face {
+  font-family: 'Pretendard-SemiBold';
+  src: url('/public/fonts/Pretendard-SemiBold.woff');
+}
+
+@font-face {
+  font-family: 'Pretendard-Bold';
+  src: url('/public/fonts/Pretendard-Bold.woff');
+}
+
+body {
+  margin: 0;
+  padding: 0;
+  font-family: 'Pretendard-Light';
+  color: #202020;
+}
+
+.underline-animation {
+  position: relative;
+  display: inline-block;
+}
+
+.underline-animation::after {
+  content: '';
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 1.5px;
+  background-color: currentColor;
+  transform: scaleX(0);
+  transform-origin: left;
+  transition: transform 0.3s ease;
+}
+
+.underline-animation:hover::after {
+  transform: scaleX(1);
 }
