--- a/src/index.css
+++ b/src/index.css
@@ -60,3 +60,15 @@ body {
 .underline-animation:hover::after {
   transform: scaleX(1);
 }
+
+.thin-scrollbar::-webkit-scrollbar {
+  width: 0.3rem;
+}
+
+.thin-scrollbar::-webkit-scrollbar-track {
+  background: #e9e9e9;
+}
+
+.thin-scrollbar::-webkit-scrollbar-thumb {
+  background: #a0a0a0;
+}
